# superai2026

./: .dockerignore  .env.example  .env.keys.local-backup  .env.production  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PRESENTATION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/skills/export-pptx/: SKILL.md
.claude/skills/generate-arts/: SKILL.md
.claude/skills/healthcheck/: SKILL.md
.claude/skills/healthcheck/scripts/: healthcheck.sh
.claude/skills/pitch-review/: SKILL.md
.claude/skills/product-demo/: SKILL.md  package.json
.claude/skills/product-demo/scripts/: run-demo.mjs
.claude/skills/reinstall-macos-app/: SKILL.md
.claude/skills/reinstall-macos-app/scripts/: reinstall.sh
.claude/skills/slidev-deck/: SKILL.md
.github/workflows/: ci.yml  desktop.yml  flare-deploy.yml  flare-pr-review.yml  flare-product-demo.yml  flare-test.yml  lint.yml
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/scripts/: prepare-sidecar.sh
apps/desktop/src/: App.tsx  components.tsx  hooks.ts  ipc.ts  styles.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  identity.rs  keychain.rs  launchagent.rs  main.rs  settings.rs  sidecar.rs  supervisor.rs  tailscale.rs  tray.rs  util.rs
apps/desktop/src/views/: Logs.tsx  Settings.tsx  Status.tsx  Wizard.tsx
apps/landing/: ART-DIRECTION.md  arts.manifest.mjs  astro.config.mjs  package.json
apps/landing/public/: llms.txt  robots.txt
apps/landing/scripts/: build-slides.mjs  compose-bubbles.py  generate-arts.mjs  merge-comic.mjs
apps/landing/src/components/: SiteNav.astro
apps/landing/src/docs/: collaboration-crdt.md  index.ts  local-first-ingestion.md  sandbox-capability-tokens.md
apps/landing/src/layouts/: DocsLayout.astro
apps/landing/src/pages/: index.astro  llms-full.txt.ts
apps/web/: .gitignore  OBSERVABILITY.md  next.config.mjs  package.json  react-router.config.ts  tsconfig.json  vercel.json  vite.config.ts
apps/web/app/: entry.server.tsx  globals.css  root.tsx  routes.ts
apps/web/app/lib/: accessStore.tsx  (+9 more)
apps/web/public/: llms.txt  robots.txt  sitemap.xml
apps/web/src/: instrumentation.ts
crates/sync/: Cargo.toml
crates/sync/src/: client.rs  config.rs  identity.rs  lib.rs  main.rs  scenario.rs  server.rs
crates/sync/src/access/: biscuit.rs  egress.rs  mod.rs  request.rs  scrub.rs  tests.rs  token.rs
crates/sync/src/agent/: editor.rs  inference.rs  mod.rs  runtime.rs
crates/sync/src/brain/: daydream.rs  links.rs  markdown.rs  mcp.rs  mod.rs  retrieval.rs  synthesis.rs  tests.rs  world.rs
crates/sync/src/connectors/: exa.rs  mod.rs  slack.rs  stripe.rs
crates/sync/src/controlplane/: audit.rs  envelope.rs  keys.rs  mod.rs  registry.rs
crates/sync/src/cron/: mod.rs  scheduler.rs
crates/sync/src/sandbox/: local.rs  mod.rs  vercel.rs
crates/sync/src/store/: docs.rs  index_db.rs  mod.rs
crates/sync/src/sync/: client.rs  mod.rs  presence.rs  protocol.rs  server.rs
demos/: story.md
infra/: Pulumi.yaml  README.md  index.ts  package.json  tsconfig.json
infra/ecs/: .env.production  Pulumi.yaml  README.md  docker-entrypoint.sh  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
infra/flare-dispatch/: README.md  UPSTREAM_SHA  demo-stories.md  provision.sh  wrangler.jsonc
infra/slack/: README.md  manifest.yaml
slides/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  slides.md  style.css
slides/setup/: main.ts  mermaid.ts
specs/: 00-overview.md  01-room-sync.md  02-brain-memory.md  03-access-control.md  04-sandbox-agents.md  05-connectors-etl.md  06-mcp-interface.md  07-deployment-iac.md  08-design-system.md  09-testing-acceptance.md  10-comparison.md  10-macos-app.md  DESIGN-SYSTEM.md  README.md  SPEC.md
tests/acceptance/: ctl.e2e.test.ts  editor.e2e.test.ts  flowc.e2e.test.ts  flows.e2e.test.ts  helpers.ts  mcp-demo.e2e.test.ts  package.json  relay.e2e.test.ts  tsconfig.json  vitest.config.ts
(+25 files in other folders)
