[package]
name = "sync"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "sync"
path = "src/lib.rs"

[[bin]]
name = "sync"
path = "src/main.rs"

[features]
# Live cloud integrations are compiled in and selected at RUNTIME by env/creds
# (EXA_API_KEY, CONTEXTFUL_INFERENCE, VERCEL_TOKEN…); absent creds degrade to
# the on-host cache / local paths (Flow D), never to fakes.
vercel-sandbox = []

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
biscuit-auth = { workspace = true }
hex = { workspace = true }
ureq = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
