[package]
name = "sync"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "sync"
path = "src/lib.rs"

[[bin]]
name = "sync"
path = "src/main.rs"

[features]
# Live integrations gated off by default (keep the build dependency-light and
# offline-capable). Enabling these would pull in HTTP/SDK stacks + credentials.
exa-http = []
vercel-sandbox = []

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
loro = { workspace = true }
