[package]
name = "contextful-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Contextful menu-bar shell — supervises the bundled sync binary (spec 10)"

# Standalone workspace on purpose: the root `cargo clippy/test` lane runs on
# ubuntu, where Tauri needs system webkit packages. The desktop crate builds
# in its own macOS CI lane instead (.github/workflows/desktop.yml).
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = [
  "process",
  "io-util",
  "time",
  "net",
  "sync",
  "macros",
  "rt-multi-thread",
  "signal",
] }

[profile.release]
strip = true
lto = true
